--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@ Raghad Saad bin Aboud - 441670059
 
 <ul>
 <li> HTML: </li>
-<ol> <li> Sheet 2 </li> 
-     <li> Sheet 3 </li> </ol>
+<ol> <li> <a href ="Form.html">Lab 1</a> </li> 
+
+
+<li> <a href ="Table.html">Lab 2</a> </li>  </ol>
      
 <li> CSS: </li>
 <li> Javascript: </li>
