--- a/table.html
+++ b/table.html
@@ -6,11 +6,23 @@
 <head> 
 <meta charset = "utf-8">
 <title> </title>
+<style>
+
+caption 
+{
+  font-size: 28px;
+  color:steelblue;
+}
+
+
+</style>
 </head>
 
 <body>
 <table border = "2">
 <caption>level 5 schedule</caption>
+
+
 
 <thead>
   <tr>
@@ -22,6 +34,7 @@
     <th>12-1</th>
     <th>1-2</th>
   </tr>
+
   </thead>
   
 <tbody>
