--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Raghad Saad bin Aboud - 441670059
 <ol> <li> <a href ="Form.html">Lab 1</a> </li> 
 
 
-<li> <a href ="Table.html">Lab 2</a> </li>  </ol>
+<li> <a href ="table.html">Lab 2</a> </li>  </ol>
      
 <li> CSS: </li>
 <li> Javascript: </li>
