--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ Raghad Saad bin Aboud - 441670059
 <li> HTML: </li>
 
 <ol> <li> <a href ="Sheet2.html">Sheet 2</a> </li> 
+     <li> <a href ="Sheet3.html">Sheet 3</a> </li> 
 
 <li> <a href ="Form.html">Lab 1</a> </li> 
 
