--- a/Sheet2.html
+++ b/Sheet2.html
@@ -15,9 +15,13 @@
 	
 <hr> <!-- inserts a horizontal rule -->
 
+<!-- create a text hyperlink -->
+
 <a href="#section1"> 91th National day</a> <a href="#section2">  national day deals</a>
 
 <hr> <!-- inserts a horizontal rule -->
+
+<!-- id attribute creates an internal hyperlink destination -->
 	
 <h1 id = "section1">Kingdom of Saudi Arabia to Celebrate 91<sup>th</sup> National Day</h1>
 
@@ -38,24 +42,27 @@
 <h1 id="section2"> 91th National Day Deals </h1>
 
 <body>
+
+<!-- create a table -->
+
 <table border = "1">
 
 <thead>
   <tr>
-    <th>store</th>
-    <th>offer</th> 
-    <th>date</th>
-    <th>link</th>
-
+  <th>store</th>
+  <th>offer</th> 
+  <th>date</th>
+  <th>link</th>
   </tr>
-
   </thead>
   
 <tbody>
 <tr>
 <td>Amazion SA</td>
 <td>10<sup>%</sup>-25 <sup>%</sup> off Electronics</td> 
- <td>Sep 20th till 26th</td>
+<td>Sep 20th till 26th</td>
+ 
+<!-- create a text hyperlink -->
 <td><a href="https://www.amazon.sa/l/21345942031?&_encoding=UTF8&tag=KSA-EN-CPC-Onbrand-GDN-Blast-GSP-Event-SND20-21&linkCode=ur2&linkId=f68928dac908022b45eae80084323f98&camp=247&creative=1211" > click here to find offer</a></td> 
 </tr>
 
@@ -63,6 +70,8 @@
 <td>6thStreet</td>
 <td>Up to 60 % off</td> 
 <td>till 01st Oct 2020</td>
+
+<!-- create a text hyperlink -->
 <td><a href="https://en-ae.6thstreet.com/women.html" > click here to find offer</a></td> 
 </tr>
 
@@ -70,6 +79,8 @@
 <td>Home Centre</td>
 <td>up to 70% on furniture, bedroom. kids room, kitchen, decor, furnishing &emp; more.</td> 
 <td>till 01st Oct 2020</td> 
+
+<!-- create a text hyperlink -->
 <td><a href="https://www.homecentre.com/sa/en/" > click here to find offer</a></td> 
 </tr>
 
@@ -79,12 +90,11 @@
 <td>till 29th sep</td>
 <td>------</td>
 </tr>
-
   
 </table>
 
-</body>
 
+</body>
 </html>
 </body>
 </html>
