--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head> 
 <meta charset = "utf-8">
 
-<title> This is Raghad webpage </title>
+<link rel="stylesheet" type="text/css" href="style.css">
+
+
+<title> <h1> This is Raghad webpage <h1> </title>
 
 </head>
 
@@ -14,10 +17,15 @@
 Raghad Saad bin Aboud - 441670059
 </h3>
 
-  <hr> <!-- inserts a horizontal rule -->
+<hr> <!-- inserts a horizontal rule -->
+
+
+
+<h1> Web Programming page <h1>
+
+
   
-	<img src ="r.jpg" width ="400" height ="250" alt = "picture ">
-	
+<img src ="r.jpg" width ="400" height ="250" alt = "picture ">
 	 
 <h3> Course Sheet: </h3>
 
