--- a/Form.html
+++ b/Form.html
@@ -1,7 +1,17 @@
-<!doctype html> <html lang="en">
+<!doctype html> 
+
+<html lang="en">
+
 <head>
-<title>CV form</title> <meta charset="UTF-8" >
-</head> <body>
+<title>CV form</title> 
+
+<meta charset="UTF-8" >
+
+<link rel="stylesheet" type="text/css" href="style.css">
+
+</head>
+
+<body>
 <h1>CV FORM</h1>
 <form action="index.html" method="Get">
 <fieldset>
