--- a/Sheet3.html
+++ b/Sheet3.html
@@ -2,6 +2,10 @@
 
 <html>
 <head>
+<meta charset = "utf-8">
+
+<link rel="stylesheet" type="text/css" href="style.css">
+ 
 <title></title>
 </head>
 <body>
