--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@ Raghad Saad bin Aboud - 441670059
 
 
 
-<h1> Web Programming page <h1>
+<h1> Web Programming page <h1> <br>
 
-
-  
 <img src ="r.jpg" width ="400" height ="250" alt = "picture ">
 	 
 <h3> Course Sheet: </h3>
@@ -49,7 +47,4 @@ Raghad Saad bin Aboud - 441670059
 </body>
 
 </html>
-
-
-
 
