--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head> 
 <meta charset = "utf-8">
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="style.css">
 
 
 <title> <h1> This is Raghad webpage <h1> </title>
