--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head> 
 <meta charset = "utf-8">
 
-<link rel="stylesheet" href="style.css">
 
 
-<title> <h1> This is Raghad webpage <h1> </title>
+<title> <h1 style="font-size: 20pt;" color: blue;"> This is Raghad webpage <h1> </title>
 
 </head>
 
