--- a/Sheet2.html
+++ b/Sheet2.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang ="en" >
+<html>
 
 <head> 
 <meta charset = "utf-8">
 
- <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 
 <title> Sheet2 </title>
 
