--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
 <head> 
 <meta charset = "utf-8">
 
+<style>
+
+body {
+
+background-image: url("shaqra.jpg");
+background-size: 450px 550px;
+background-repeat:no-repeat;
+background-position:top right;
+background-attachment:fixed;
+
+  
+}
+ 
+h1 {
+color: blue;
+text-align: left;
+}
 
 
-<title> <h1 style="font-size: 20pt;" color: blue;"> This is Raghad webpage <h1> </title>
+ul.a {
+  list-style-type: square;
+}
+
+ol.b {
+  list-style-type: upper-roman;
+}
+
+ol.c {
+  list-style-type: lower-roman;
+}
+
+
+</style>
+
+
+<title> <h1 style="font-size: 20pt;" color: blue;"> This is Raghad webpage </h1> </title>
 
 </head>
 
@@ -14,7 +47,7 @@
 
 <h3>
 Raghad Saad bin Aboud - 441670059
-</h3>
+</h3> <br>
 
 <hr> <!-- inserts a horizontal rule -->
 
@@ -28,11 +61,12 @@ Raghad Saad bin Aboud - 441670059
 
 
 
-<ul>
+<ul class="a">
 <li> HTML: </li>
 
-<ol> <li> <a href ="Sheet2.html">Sheet 2</a> </li> 
-     <li> <a href ="Sheet3.html">Sheet 3</a> </li> 
+<ol class="b">
+
+
 
 <li> <a href ="Form.html">Lab 1</a> </li> 
 
@@ -43,6 +77,16 @@ Raghad Saad bin Aboud - 441670059
 <li> PHP </li>
 
 </ul>
+
+<h3> Sheet: </h3>
+
+<ul>
+
+<ol class="c">
+
+<li> <a href ="Sheet1.html">Sheet 1</a> </li> 
+<li> <a href ="Sheet2.html">Sheet 2</a> </li> 
+
 </body>
 
 </html>
