--- a/Sheet2.html
+++ b/Sheet2.html
@@ -1,102 +1,92 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
-<head> 
+<head>
 <meta charset = "utf-8">
 
-<link rel="stylesheet" href="style.css">
-
-<title> Sheet2 </title>
-
-</head>
-
-<body>
-
- <!-- insert picture -->  
-<img src ="national.jpg" width ="600" height ="250" alt = "picture ">
-	
-<hr> <!-- inserts a horizontal rule -->
-
-<!-- create a text hyperlink -->
-
-<a href="#section1"> 91th National day</a> <a href="#section2">  national day deals</a>
-
-<hr> <!-- inserts a horizontal rule -->
-
-<!-- id attribute creates an internal hyperlink destination -->
-	
-<h1 id = "section1">Kingdom of Saudi Arabia to Celebrate 91<sup>th</sup> National Day</h1>
-
-<p style="font-size:14pt"> The Kingdom of Saudi Arabia’s leadership and people will celebrate tomorrow, Wednesday, September 23, 2020, the 90th National Day of Saudi Arabia, after the historical announcement of the late King Abdulaziz bin Abdulrahman Al Saud of Saudi Arabia’s unification under "There is no god but Allah; Muhammad is the Messenger of Allah" banner.</p>
-<p>Saudi National Day is the day on which the late founder named the Kingdom of Saudi Arabia throughout the country, after 32 years of wars. On that day, a young country was established that prided itself by the application of the Islamic Sharia and its preservation of human values, promoting peace and goodness and in search of knowledge and development towards a better future for its people, the Islamic nation and the whole world. </p>
-<p>King Abdulaziz ordered at the beginning of structuring Saudi Arabia to pay great attention to the Two Holy Mosques and their expansion and to serving pilgrims and Umrah performers, as well as establishing schools and hospitals, building villages, rehabilitating the soil, and exploring irrigation water in order to support agriculture. </p>
-<p>Then, King Saud bin Abdulaziz Al Saud was the first to follow this approach and to work within its framework until the features of progress emerged and the structures of a number of basic institutions and agencies in the country were completed.</p>
-<p>In the era of the pioneer of Islamic solidarity, who succeeded King Saud, King Faisal bin Abdulaziz Al Saud, achieving accomplishments continued, and during his reign, the Kingdom of Saudi Arabia began the implementation of the ambitious five-year plans for development.</p>
-<p>In the reign of King Khalid bin Abdulaziz Al Saud, building and growth continued to serve the country and citizens in particular and Islam and Muslims in general. The development plans also connected with each other for the sake of achieving more prosperity and stability.</p>
-<p>The achievements during the reign of King Fahd bin Abdulaziz Al Saud were characterized by comprehensiveness and integration to form a comprehensive development process for building a nation and a wise and unique leadership that embodied many qualities that he had, the most prominent of which was his adherence to the holy Quran and prophetic Sunnah, and his dedication to serving his homeland, citizens, the Islamic nation and the entire humankind.</p>
-<p>During the era of the Custodian of the Two Holy Mosques King Abdullah bin Abdulaziz Al Saud, the Kingdom of Saudi Arabia witnessed more giant developmental achievements throughout the nation in various sectors, including education, health, transportation, industry, electricity, water, agriculture and the economy.</p>
-<p>Today, Saudi Arabia witnesses a distinguished present, looking forward to a more distinguished future full of confidence in the title of the stage, the Custodian of the Two Holy Mosques King Salman bin Abdulaziz Al Saud, who has been making, since the beginning of his reign, an effort to advance Saudi Arabia. The activities varied in various fields at regional and international levels, preceded by accomplishments at various stages during his reign in many positions.</p>
-<p>Today, Saudi Arabia’s National Day passes by while we live in a bright reality established by the late founder King Abdulaziz. <sub> source : SPA </sub> </p>
-
-<hr> <!-- inserts a horizontal rule -->
-
-
-<h1 id="section2"> 91th National Day Deals </h1>
-
-<body>
-
-<!-- create a table -->
-
-<table border = "1">
-
-<thead>
-  <tr>
-  <th>store</th>
-  <th>offer</th> 
-  <th>date</th>
-  <th>link</th>
-  </tr>
-  </thead>
-  
-<tbody>
-<tr>
-<td>Amazion SA</td>
-<td>10<sup>%</sup>-25 <sup>%</sup> off Electronics</td> 
-<td>Sep 20th till 26th</td>
+<link rel="stylesheet"  href="style.css">
  
-<!-- create a text hyperlink -->
-<td><a href="https://www.amazon.sa/l/21345942031?&_encoding=UTF8&tag=KSA-EN-CPC-Onbrand-GDN-Blast-GSP-Event-SND20-21&linkCode=ur2&linkId=f68928dac908022b45eae80084323f98&camp=247&creative=1211" > click here to find offer</a></td> 
-</tr>
+<title></title>
+</head>
+<body>
 
-<tr>
-<td>6thStreet</td>
-<td>Up to 60 % off</td> 
-<td>till 01st Oct 2020</td>
 
-<!-- create a text hyperlink -->
-<td><a href="https://en-ae.6thstreet.com/women.html" > click here to find offer</a></td> 
-</tr>
+<form action="/action_page.php" target="_blank">
+<h1>Coronavirus Intake Form for attend class </h1>
 
-<tr>
-<td>Home Centre</td>
-<td>up to 70% on furniture, bedroom. kids room, kitchen, decor, furnishing &emp; more.</td> 
-<td>till 01st Oct 2020</td> 
+<p>For all of our safety, please fill this our 24 hours prior to each class(until further notice). Be sure that the information you'll give is accurate and complete. Please get immedical attention if you have any of the severe COVID-19 signs.</p>
 
-<!-- create a text hyperlink -->
-<td><a href="https://www.homecentre.com/sa/en/" > click here to find offer</a></td> 
-</tr>
 
-<tr>
-<td>FitnessTime</td>
-<td>save 25%</td>
-<td>till 29th sep</td>
-<td>------</td>
-</tr>
+<!-- fildset -->
+<form >
+<fieldset>
+<legend>Personal Information </legend>  
+<label for="Fname">First Name:</label><br>
+<input type="text" id="Fname" name="fn" required> <br>
+<label for="Lname">Last Name:</label><br>
+<input type="text" id="Lname" name="ln" maxlength="6"><br> 
+<!-- date -->
+<label for='DOB'>date of birth</label>
+<input type='date' id="DOB" name='DOB' max="2002-12-31"> <br>
+<label for="phone">phone:</label><br>
+<input type="tel" id="t" name="phone" pattern='[0-9]{3}-[0-9]{2}-[0-9]{3}' placeholder="555-55-555"> <br>
+<label for="Email">Email:</label><br>
+<input type="text" id="Email" name="Em"required placeholder="Email@hotmail.com"> <br></br> 
+<!-- Radio-->
+<label for="yes">Do you have"تطمئن - تباعد - توكلنا " APPs in your phone:</label>
+<input type="radio" id="YES" name="dyh" value='yes'required> 
+<label for="yes">YES</label>
+<input type="radio" id="NO" name="dyh" value='no'>
+<label for='no'>NO</label>
+<br><br>     
+</fieldset>       
+<br></br>
+
+
+<fieldset>
+<legend>Class information </legend> 
+
+<!-- list-->
+<label for='choose'>Choose</label>
+<input list="choose" name="ch">
+<datalist id="choose">
+<option value="204IT:Web programming">
+<option value="201 Cs:programming1">
+<option value="202 Cs:programming2">
+<option value="412 Cs:computer ethic">
+</datalist><br><br> 
+
   
-</table>
 
+<!-- texterea--> 
+<label for='cp'>Please explain why you need to attend lab </label><br></br>
+<textarea id='cp' name='comment' rows='10' cols='30'></textarea><br>
+</fieldset><br></br>
 
-</body>
-</html>
+<fieldset>
+<legend>Health information </legend>  
+
+<!-- range -->
+<label for='r'>How healthy do you feel in general?</label><br>
+0<input type='range' id='r' name='rs' min="0" max="10" >10 
+<br>
+<!-- checkbox-->
+<label >Check the symptoms that you have experienced in the PAST Week:</label><br>
+<input type='checkbox' id='c1' name='check' value ='Fever/Chills'>
+<label for='c1'>Fever/Chills</label><br>
+<input type='checkbox' id='c2' name='check' value='Headaches'>
+<label for='c1'>Headaches</label><br>
+<input type='checkbox' id='c3' name='check' value ='Coughing'>
+<label for='c1'>Coughing</label><br>
+<input type='checkbox' id='c4' name='check' value='Shortness of breath'>
+<label for='c1'>Shortness of breath</label><br>
+<input type='checkbox' id='c5' name='check' value ='Recent loss of sense of smell or taste'>
+<label for='c1'>Recent loss of sense of smell or taste</label><br>
+</fieldset>       
+<br></br>
+
+<input type="submit" value="Send">
+  
+  
 </body>
 </html>
