--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@ Raghad Saad bin Aboud - 441670059
      
 <li> CSS: </li>
 <li> Javascript: </li>
+
+<ol> <a href="Task1.html">Task1</a></ol>
+<ol> <a href="Task2.html">Task2</a></ol>
+<ol> <a href="Task3.html">Task3</a></ol>
+<br>
+
 <li> PHP </li>
 
 </ul>
