--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@ Raghad Saad bin Aboud - 441670059
      
 <li> CSS: </li>
 <li> Javascript: </li>
-
+<ol><h3>Javascript Sheet:</h3></ol>
 <ol> <a href="Task1.html">Task1</a></ol>
 <ol> <a href="Task2.html">Task2</a></ol>
 <ol> <a href="Task3.html">Task3</a></ol>
-<br>
+
+<ol><h3>Javascript Assignment:</h3></ol>
+<ol> <a href="Assignment1.html">Question2 (A)</a></ol>
+<ol> <a href="Assignment2.html">Question2 (B)</a></ol>
+
 
 <li> PHP </li>
 
