--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@ Raghad Saad bin Aboud - 441670059
 <ol><h3>Javascript Assignment:</h3></ol>
 <ol> <a href="Assignment1.html">Question2 (A)</a></ol>
 <ol> <a href="Assignment2.html">Question2 (B)</a></ol>
+<br>
+<ol> <a href="Sheet6.html">Sheet 6</a></ol>
+
 
 
 <li> PHP </li>
-
 </ul>
 
 <h3> Sheet: </h3>
